error and reactive retry handlers added